Complete 2018, add some 2019.

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -31,7 +31,72 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <tr>
 
-  <th rowspan="4"><span class="verticaltext">2018</span></th>
+  <th rowspan="2"><span class="verticaltext">2019</span></th>
+
+<td>JavaLand</td> 
+
+<td>Br&uuml;hl, Germany</td>
+
+<td>March
+</td>
+
+<td>Programming Platform Growth: Table Stakes or Deal Makes? (<a href="https://www.javaland.eu/de/home/news/details/?tx_news_pi1%5Bnews%5D=1898&tx_news_pi1%5Bcontroller%5D=News&tx_news_pi1%5Baction%5D=detail&cHash=e401ab4b1d71a95481303caff88a05e5">video</a>), Community Keynote: Powerpoint Karaoke (starts at 22:34 <a href="https://www.javaland.eu/de/home/news/details/?tx_news_pi1%5Bnews%5D=1890&tx_news_pi1%5Bcontroller%5D=News&tx_news_pi1%5Baction%5D=detail&cHash=2bc72fb338c0e86b99e007d1d3dada8c">video</a>), <a href="https://programm.javaland.eu/2019/#/scheduledEvent/569084">Cloud Perspective: Kubernetes is like an App Server, but more Cloudy</a> <a href="https://twitter.com/nighthacking/status/1108322330256658432">Kubernetes Operators for WebLogic and Coherence</a></td>
+
+</tr>
+  
+
+<tr>  
+
+<td>Orlando JUG</td> 
+
+<td>Orlando, USA</td>
+
+<td>March
+</td>
+
+<td><a href="https://www.meetup.com/OrlandoJUG/events/258490920/">Programming Platform Growth: Table Stakes or Deal Makes?</a></td>
+
+</tr>
+
+
+<tr>
+
+<th rowspan="6"><span class="verticaltext">2018</span></th>
+
+<td>DOAG</td> 
+
+<td>Nuremberg, Germany</td>
+
+<td>November
+</td>
+
+<td><a href="https://programm.doag.org/doag/2018/#/scheduledEvent/562551">Cloud Perspective: Kubernetes is like an app server, but more cloudy (Ed Burns & Oliver Szymanski)</a></td>
+
+</tr>
+
+<tr>
+
+<td>TopConf</td>
+
+<td>Tallinn, Estonia</td>
+
+<td>November</td>
+
+<td><a href="https://www.facebook.com/topconf/">Table Stakes or Deal Makes: Programming Language Platform Growth</a></td>
+
+</tr>
+
+<tr>
+
+  <td>Linz JUG</td>
+
+  <td>Linz, Austria</td>
+
+  <td>November</td>
+
+  <td><a href="https://www.meetup.com/Enterprise-Java-User-Group-Austria/events/255630550/">Table Stakes or Deal Makes: Programming Language Platform Growth</a></td>
+
+</tr>
 
 <tr>
 
@@ -72,6 +137,7 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 <td>Secrets of the Above Average Programmers, Career Panel, Java EE 8 SouJAVA JUG meeting</a></td>
 
 </tr>
+
 
 <tr>
 
