--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -31,7 +31,41 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <tr>
 
-  <th rowspan="2"><span class="verticaltext">2019</span></th>
+  <th rowspan="5"><span class="verticaltext">2019</span></th>
+
+  <td>SouJava</td>
+
+  <td>S&atilde;o Paulo, Brazil</td>
+
+  <td>April</td>
+
+  <td><a href="https://www.eventbrite.com/e/soujava-apresenta-ed-burns-no-brasil-tickets-59781412815">Oracle Coherence for Kubernetes</a></td>
+
+</tr>
+
+  <td>TDC Floripa</td>
+
+  <td>Florianopolis, Brazil</td>
+
+  <td>April</td>
+
+  <td>Programming Platform Growth: Table Stakes or Deal Makes?, Career Tips from Someone Who Knows A Lot of Rockstar Programmers</td>
+
+</tr>
+
+<tr>  
+
+  <td>GUJavaSC</td>
+
+  <td>Florianopolis, Brazil</td>
+
+  <td>April</td>
+
+  <td><a href="https://www.meetup.com/gujavasc/events/260342648/?_xtd=gqFyqTExNTAzODEwMqFwo3dlYg">Oracle Coherence for Kubernetes</a></td>
+
+</tr>
+  
+<tr>  
 
 <td>JavaLand</td> 
 
@@ -129,7 +163,7 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <td>Campus Party Brzil</td> 
 
-<td>São Paulo, Brazil</td>
+<td>S&atilde;o Paulo, Brazil</td>
 
 <td>January
 </td>
@@ -797,7 +831,7 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 <td>The Globalcode Developer's Conference
 </td>
 
-<td>São Paulo, Brazil</td>
+<td>S&atilde;o Paulo, Brazil</td>
 
 <td>November
 </td>
@@ -958,7 +992,7 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 <td>The Globalcode Developer's Conference
 </td>
 
-<td>São Paulo, Brazil
+<td>S&atilde;o Paulo, Brazil
 </td>
 
 <td>July 
@@ -1098,7 +1132,7 @@ preview
 <td>The Globalcode Developer's Conference
 </td>
 
-<td>São Paulo, Brazil
+<td>S&atilde;o Paulo, Brazil
 </td>
 
 <td>September 
