Add groundbreakers video.

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -49,7 +49,7 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
   <td>April</td>
 
-  <td>Programming Platform Growth: Table Stakes or Deal Makes? (<a href="https://www.eventials.com/Globalcode/tdc-floripa-2019-stadium-terca-1/">video</a>), Career Tips from Someone Who Knows A Lot of Rockstar Programmers</td>
+  <td>Programming Platform Growth: Table Stakes or Deal Makes? (<a href="https://www.eventials.com/Globalcode/tdc-floripa-2019-stadium-terca-1/">video</a>), Career Tips from Someone Who Knows A Lot of Rockstar Programmers, Oracle Coherence for Kubernetes (<a href="https://twitter.com/OracleDevs/status/1121115053883662336">video</a>)</td>
 
 </tr>
 
