--- a/edburns/index.html
+++ b/edburns/index.html
@@ -19,8 +19,8 @@
   <body>
     <h1>Ed Burns <a href="../author.jpg"><img width="109" src="../author.jpg" alt="Headshot of Ed Burns" /></a></h1>
 
-<p>Photograph copyright 2013 <a href="http://www.doag.org/">DOAG</a> and
-<a href="http://www.anneeilers.com/">Ann Eilers</a>.</p>
+<p>Photograph copyright 2018 <a href="https://www.facebook.com/MysticKatz">Jennifer Reis</a> and
+<a href="https://www.facebook.com/jrrockshots/">JR Rock Shots</a>.</p>
 
 <div id="twitter_div">
 <h2 class="sidebar-title">Last Three Tweets</h2>
