--- a/author.html
+++ b/author.html
@@ -55,41 +55,45 @@
       <img width="109" alt="Ed Burns headshot"
            src="author.jpg" alt="Headshot of Ed Burns" /></a>
 
-<p>Ed Burns is a Consulting Member of the Technical Staff at Oracle
-America, Inc. and has worked on a wide variety of client and server side
+<p>Ed Burns is currently Principal Architect on the Java Tooling and
+Experiences team at Microsoft. In this role, Ed will help make Azure the
+best place for Enterprise Java.  Prior to joining Microsoft, Ed was a
+Consulting Member of the Technical Staff At Oracle.  While there, Ed was
+the specification lead or co-lead for JavaServer Faces, the standard Web
+Application Framework for Java EE, and for Servlet, the standard HTTP
+API for Java EE.  Ed continued in these roles from his work at Sun
+Microsystems, Inc.  In these roles, Ed lead a team of web experts from
+across the industry in developing JavaServer Faces and Servlet
+Technology through the Java Community Process and in open source. His
+areas of professional interests include web application frameworks,
+AJAX, reducing complexity, test driven development, requirements
+gathering, and computer supported collaborative work. Before working on
+JavaServer Faces, Ed worked on a wide variety of client and server side
 web technologies since 1994, including NCSA Mosaic, Mozilla, the Sun
-Java Plugin, Jakarta Tomcat and, most extensively, JavaServer Faces, on
-which he is the co-spec lead.  Ed is also the co-spec lead for the
-Servlet specification.  Ed is an experienced international conference
-speaker, with consistently high attendence numbers and ratings at
-JavaOne (Rockstar award winner 2016), Devoxx, DevNexus, JAOO, JAX,
-W-JAX, No Fluff Just Stuff, JA-SIG, The Ajax Experience, and Java and
-Linux User Groups.  He has published four books with McGraw-Hill,
-JavaServerFaces: The Complete Reference (2006), Secrets of the Rockstar
-Programmers: Riding the IT crest (2008) JavaServer Faces 2.0: The
-Complete Reference (2010) and Hudson Continuous Integration In Practice
-(2013).</p>
-
-<p>Ed is a frequent speaker at international industry conferences,
-having presented many times at Oracle's JavaOne conference, given
-keynote addresses at the W-JAX and JAX conferences in Germany, the
-Globalcode Developer's Conference in Sao Paulo, Brazil, the JSF Days and
-CONFESS Conferences in Vienna, Austria, the DOAG Conference in
-Nuremberg, Germany, and also has spoken at numerous Java User Group
-meetings and the No Fluff Just Stuff Java Symposium.  Further
-information and blogs may be found at <a
-href="http://purl.oclc.org/NET/edburns/">http://purl.oclc.org/NET/edburns/</a>.
+Java Plugin, Jakarta Tomcat, the Cosmo Create HTML authoring tool, and
+the web transport layer in the Irix operating system from Silicon
+Graphics.  Ed is an experienced international conference speaker, with
+consistently high attendence numbers and ratings at Oracle OpenWorld,
+Oracle CodeOne, JavaOne (Rockstar award winner 2016), Devoxx, JavaPolis,
+GeekOut, Code Europe, The GlobalCode Developer's Conference, DevNexus,
+JAOO, JAX, W-JAX, No Fluff Just Stuff, JA-SIG, DOAG, JavaLand, ConFESS,
+JSF Days, The Ajax Experience, and Java and Linux User Groups.  He has
+published four books with McGraw-Hill, JavaServerFaces: The Complete
+Reference (2006), Secrets of the Rockstar Programmers: Riding the IT
+crest (2008) JavaServer Faces 2.0: The Complete Reference (2010) and
+Hudson Continuous Integration In Practice (2013).  Further information
+and blogs may be found
+at <a href="http://purl.oclc.org/NET/edburns/">http://purl.oclc.org/NET/edburns/</a>.
 Read his blog <a href="blog/">here</a>.</p>
 
-<p>Photograph copyright 2013 <a href="http://www.doag.org/">DOAG</a> and
-<a href="http://www.anneeilers.com/">Ann Eilers</a>.</p>
-
+<p>Photograph copyright 2018 <a href="https://www.facebook.com/MysticKatz">Jennifer Reis</a> and
+<a href="https://www.facebook.com/jrrockshots/">JR Rock Shots</a>.</p>
 
 </div><!--main-->
 
 </div><!--wrapper-->
 <div id="footer">
-&copy; 2008 - 2013 by Ed Burns | Site design by <a href="http://www.xoxiety.com">Xoxiety.com</a>
+&copy; 2008 - 2019 by Ed Burns | Site design by <a href="http://www.xoxiety.com">Xoxiety.com</a>
 </div>
 
 
