--- a/edburns/1990-coh-video/index.html
+++ b/edburns/1990-coh-video/index.html
@@ -23,7 +23,7 @@ be better to just share it right now.  Please consider donating to
 the <a href="https://1strcf.org/">First Responders Children's
 Foundation</a>.</p>
 
-<video width="1024" height="768" controls>
+<video width="1280" height="720" controls>
   <source src="20200320-1990-coh-end-of-year-video.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
@@ -39,5 +39,9 @@ as a "take down notice".  So, I'm hosting it here instead.</p>
 <br />
 <br />
 <br />
+
+<hr />
+
+[ <a href="../">Home</> ]
 
 </BODY></HTML>
