Serve from Dropbox

--- a/edburns/1990-coh-video/index.html
+++ b/edburns/1990-coh-video/index.html
@@ -24,7 +24,7 @@ the <a href="https://1strcf.org/">First Responders Children's
 Foundation</a>.</p>
 
 <video width="1280" height="720" controls>
-  <source src="20200320-1990-coh-end-of-year-video.mp4" type="video/mp4">
+  <source src="https://ucf512e7a4aa271f13056505f93a.dl.dropboxusercontent.com/cd/0/inline/A0---gL46guo9tavrFOuHmzecMdynawAae-PkxnI2_eGOncpHP2UgtvsOKNFqEekMgmsxtddacBS1doiKo3BKZqurp_6dicj25QZ-SPRUa-9xjZt7l3J0yuA-3pR1oJwwk4/file#" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
