--- a/edburns/1990-coh-video/index.html
+++ b/edburns/1990-coh-video/index.html
@@ -19,9 +19,14 @@
 
 <p>I was going to wait for our 30 year reunion before sharing this, but
 with so many of us sheltering in place due to COVID19, I felt it would
-be better to just share it right now.  Please consider donating to
-the <a href="https://1strcf.org/">First Responders Children's
-Foundation</a>.</p>
+be better to just share it right now.  Please consider donating to one 
+of these charities, depending on your economic and political inclinations.</p>
+
+<ul>
+<li><a href="https://1strcf.org/">First Responders Children's Foundation</a></li>
+<li><a href="https://www.deathwithdignity.org/">Death with Dignity</a></li>
+</ul>
+
 
 <video width="1280" height="720" controls>
   <source src="https://ucf512e7a4aa271f13056505f93a.dl.dropboxusercontent.com/cd/0/inline/A0---gL46guo9tavrFOuHmzecMdynawAae-PkxnI2_eGOncpHP2UgtvsOKNFqEekMgmsxtddacBS1doiKo3BKZqurp_6dicj25QZ-SPRUa-9xjZt7l3J0yuA-3pR1oJwwk4/file#" type="video/mp4">
