--- a/edburns/1990-coh-video/index.html
+++ b/edburns/1990-coh-video/index.html
@@ -27,9 +27,12 @@ of these charities, depending on your economic and political inclinations.</p>
 <li><a href="https://www.deathwithdignity.org/">Death with Dignity</a></li>
 </ul>
 
+<!-- DropBox share link https://www.dropbox.com/s/agyapcysraz4ygr/20200320-1990-coh-end-of-year-video.mp4?dl=0 -->
+<!-- first redirect https://www.dropbox.com/s/raw/agyapcysraz4ygr/20200320-1990-coh-end-of-year-video.mp4 -->
+<!-- second redirect 20200401 https://ucd1df730de1a3e76fb08d255c77.dl.dropboxusercontent.com/cd/0/inline/A1ASmRAJik3WTmI8uP-XYS4LbsPJV1JLD25agifHcjl3f3eNMvi_TvVoSBFnRbmJclehPOHzhyTNblWNV13r554V7v0gT5gwjF5QAxFOmgXrbnlAzxZnbhjykH5m0X189EA/file# -->
 
 <video width="1280" height="720" controls>
-  <source src="https://ucf512e7a4aa271f13056505f93a.dl.dropboxusercontent.com/cd/0/inline/A0---gL46guo9tavrFOuHmzecMdynawAae-PkxnI2_eGOncpHP2UgtvsOKNFqEekMgmsxtddacBS1doiKo3BKZqurp_6dicj25QZ-SPRUa-9xjZt7l3J0yuA-3pR1oJwwk4/file#" type="video/mp4">
+  <source src="https://ucd1df730de1a3e76fb08d255c77.dl.dropboxusercontent.com/cd/0/inline/A1ASmRAJik3WTmI8uP-XYS4LbsPJV1JLD25agifHcjl3f3eNMvi_TvVoSBFnRbmJclehPOHzhyTNblWNV13r554V7v0gT5gwjF5QAxFOmgXrbnlAzxZnbhjykH5m0X189EA/file#" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
