--- a/edburns/1990-coh-video/index.html
+++ b/edburns/1990-coh-video/index.html
@@ -27,7 +27,19 @@ of these charities, depending on your economic and political inclinations.</p>
 <li><a href="https://www.deathwithdignity.org/">Death with Dignity</a></li>
 </ul>
 
-<!-- DropBox share link https://www.dropbox.com/s/agyapcysraz4ygr/20200320-1990-coh-end-of-year-video.mp4?dl=0 -->
+<p>Thanks to my mom, who held on to this VHS tape for 30 years.</p>
+    
+<p>You may ask, "<a href="20200320-youtube-nope.jpg">Why not just upload
+this to YouTube?</a>" I tried.  The answer is that in 1990, when we made
+this video, there was no such thing as a "take down notice".  So, I'm
+hosting it here (via GitHub Pages and DropBox) instead.</p>
+
+<p>If the video does not play, it is because the DropBox redirect has
+changed and I haven't yet written the JavaScript code
+to <a href"https://www.dropboxforum.com/t5/Dropbox-files-folders/Saving-URL-to-act-as-a-URL-Redirect/td-p/168458">resolve
+that</a>. In the meantime, the dropbox share link
+is <a href="https://www.dropbox.com/s/raw/agyapcysraz4ygr/20200320-1990-coh-end-of-year-video.mp4">https://www.dropbox.com/s/raw/agyapcysraz4ygr/20200320-1990-coh-end-of-year-video.mp4</a>.</p>
+
 <!-- first redirect https://www.dropbox.com/s/raw/agyapcysraz4ygr/20200320-1990-coh-end-of-year-video.mp4 -->
 <!-- second redirect 20200401 https://ucd1df730de1a3e76fb08d255c77.dl.dropboxusercontent.com/cd/0/inline/A1ASmRAJik3WTmI8uP-XYS4LbsPJV1JLD25agifHcjl3f3eNMvi_TvVoSBFnRbmJclehPOHzhyTNblWNV13r554V7v0gT5gwjF5QAxFOmgXrbnlAzxZnbhjykH5m0X189EA/file# -->
 
@@ -36,15 +48,6 @@ of these charities, depending on your economic and political inclinations.</p>
   Your browser does not support the video tag.
 </video>
 
-<p>Thanks to my mom, who held on to this VHS tape for 30 years.</p>
-    
-<p>You may ask, "Why not just upload this to YouTube?"  I tried.  The
-answer is that in 1990, when we made this video, there was no such thing
-as a "take down notice".  So, I'm hosting it here instead.</p>
-
-<a href="20200320-youtube-nope.jpg"><img src="20200320-youtube-nope-smaller.jpg" alt="The Beatles are agressive in their content control."></a>
-
-<br />
 <br />
 <br />
 
