On branch master manual redirect following modified:   edburns/1990-coh-video/index.html
Apply advice from https://www.dropbox.com/s/agyapcysraz4ygr/20200320-1990-coh-end-of-year-video.mp4?raw=1

--- a/edburns/1990-coh-video/index.html
+++ b/edburns/1990-coh-video/index.html
@@ -34,17 +34,23 @@ this to YouTube?</a>" I tried.  The answer is that in 1990, when we made
 this video, there was no such thing as a "take down notice".  So, I'm
 hosting it here (via GitHub Pages and DropBox) instead.</p>
 
+<!--
+
 <p>If the video does not play, it is because the DropBox redirect has
 changed and I haven't yet written the JavaScript code
 to <a href"https://www.dropboxforum.com/t5/Dropbox-files-folders/Saving-URL-to-act-as-a-URL-Redirect/td-p/168458">resolve
 that</a>. In the meantime, the dropbox share link
 is <a href="https://www.dropbox.com/s/raw/agyapcysraz4ygr/20200320-1990-coh-end-of-year-video.mp4">https://www.dropbox.com/s/raw/agyapcysraz4ygr/20200320-1990-coh-end-of-year-video.mp4</a>.</p>
+-->
 
+<!-- dropbox share link https://www.dropbox.com/s/agyapcysraz4ygr/20200320-1990-coh-end-of-year-video.mp4?dl=0 -->
+<!-- dropbox share link with https://www.dropboxforum.com/t5/Dropbox-files-folders/Embed-Video-to-Website/td-p/208019 applied 
+  https://www.dropbox.com/s/agyapcysraz4ygr/20200320-1990-coh-end-of-year-video.mp4?raw=1 -->
 <!-- first redirect https://www.dropbox.com/s/raw/agyapcysraz4ygr/20200320-1990-coh-end-of-year-video.mp4 -->
 <!-- second redirect 20200401 https://ucd1df730de1a3e76fb08d255c77.dl.dropboxusercontent.com/cd/0/inline/A1ASmRAJik3WTmI8uP-XYS4LbsPJV1JLD25agifHcjl3f3eNMvi_TvVoSBFnRbmJclehPOHzhyTNblWNV13r554V7v0gT5gwjF5QAxFOmgXrbnlAzxZnbhjykH5m0X189EA/file# -->
 
 <video width="1280" height="720" controls>
-  <source src="https://ucd1df730de1a3e76fb08d255c77.dl.dropboxusercontent.com/cd/0/inline/A1ASmRAJik3WTmI8uP-XYS4LbsPJV1JLD25agifHcjl3f3eNMvi_TvVoSBFnRbmJclehPOHzhyTNblWNV13r554V7v0gT5gwjF5QAxFOmgXrbnlAzxZnbhjykH5m0X189EA/file#" type="video/mp4">
+  <source src="https://www.dropbox.com/s/agyapcysraz4ygr/20200320-1990-coh-end-of-year-video.mp4?raw=1" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
