--- a/edburns/1990-coh-video/index.html
+++ b/edburns/1990-coh-video/index.html
@@ -34,14 +34,7 @@ this to YouTube?</a>" I tried.  The answer is that in 1990, when we made
 this video, there was no such thing as a "take down notice".  So, I'm
 hosting it here (via GitHub Pages and DropBox) instead.</p>
 
-<!--
-
-<p>If the video does not play, it is because the DropBox redirect has
-changed and I haven't yet written the JavaScript code
-to <a href"https://www.dropboxforum.com/t5/Dropbox-files-folders/Saving-URL-to-act-as-a-URL-Redirect/td-p/168458">resolve
-that</a>. In the meantime, the dropbox share link
-is <a href="https://www.dropbox.com/s/raw/agyapcysraz4ygr/20200320-1990-coh-end-of-year-video.mp4">https://www.dropbox.com/s/raw/agyapcysraz4ygr/20200320-1990-coh-end-of-year-video.mp4</a>.</p>
--->
+<p>If the video does not play in the page, downleod the MP4 file <a href="https://www.dropbox.com/s/agyapcysraz4ygr/20200320-1990-coh-end-of-year-video.mp4?raw=1">https://www.dropbox.com/s/agyapcysraz4ygr/20200320-1990-coh-end-of-year-video.mp4?raw=1</a> and play it locally.</p>
 
 <!-- dropbox share link https://www.dropbox.com/s/agyapcysraz4ygr/20200320-1990-coh-end-of-year-video.mp4?dl=0 -->
 <!-- dropbox share link with https://www.dropboxforum.com/t5/Dropbox-files-folders/Embed-Video-to-Website/td-p/208019 applied 
