On branch master manual redirect following modified:   edburns/1990-coh-video/index.html
Apply advice from https://www.dropbox.com/s/agyapcysraz4ygr/20200320-1990-coh-end-of-year-video.mp4?raw=1

--- a/edburns/1990-coh-video/index.html
+++ b/edburns/1990-coh-video/index.html
@@ -34,7 +34,7 @@ this to YouTube?</a>" I tried.  The answer is that in 1990, when we made
 this video, there was no such thing as a "take down notice".  So, I'm
 hosting it here (via GitHub Pages and DropBox) instead.</p>
 
-<p>If the video does not play in the page, downleod the MP4 file <a href="https://www.dropbox.com/s/agyapcysraz4ygr/20200320-1990-coh-end-of-year-video.mp4?raw=1">https://www.dropbox.com/s/agyapcysraz4ygr/20200320-1990-coh-end-of-year-video.mp4?raw=1</a> and play it locally.</p>
+<p>If the video does not play in the page, download the MP4 file <a href="https://www.dropbox.com/s/agyapcysraz4ygr/20200320-1990-coh-end-of-year-video.mp4?raw=1">https://www.dropbox.com/s/agyapcysraz4ygr/20200320-1990-coh-end-of-year-video.mp4?raw=1</a> and play it locally.</p>
 
 <!-- dropbox share link https://www.dropbox.com/s/agyapcysraz4ygr/20200320-1990-coh-end-of-year-video.mp4?dl=0 -->
 <!-- dropbox share link with https://www.dropboxforum.com/t5/Dropbox-files-folders/Embed-Video-to-Website/td-p/208019 applied 
