--- a/edburns/owenburns-17th-birthday/index.html
+++ b/edburns/owenburns-17th-birthday/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<HTML><HEAD><TITLE>Cardinal O'Hara High School 1990 End of the Year Video</TITLE>
+<HTML><HEAD><TITLE>BIRTHDAY</TITLE>
     <META content="text/html; charset=windows-1252" http-equiv=Content-Type><!-- SGI_COMMENT COSMOCREATE --><!-- SGI_COMMENT VERSION NUMBER="1.0.1a1" -->
     <LINK href="../basic.css" rel=stylesheet title=basic type=text/css></LINK>
 <META content="MSHTML 5.00.2920.0" name=GENERATOR>
