On branch master modified:   edburns/calendar.html
- Use public calendar.

- Fix dimensions of headshot.

modified:   edburns/index.html

- Fix twitter.

- Remove java.net blog.

- Fix calendar.

--- a/edburns/calendar.html
+++ b/edburns/calendar.html
@@ -17,10 +17,10 @@
   </head>
 
   <body>
-    <h1>Ed Burns <a href="../author.jpg"><img width="164" height="109" src="../author.jpg" alt="Headshot of Ed Burns" /></a></h1>
+    <h1>Ed Burns <a href="../author.jpg"><img width="109" src="../author.jpg" alt="Headshot of Ed Burns" /></a></h1>
 
-<p>Photograph copyright 2011 <a href="http://www.doag.org/">DOAG</a> and
-<a href="http://www.anneeilers.com/">Ann Eilers</a>.</p>
+<p>Photograph copyright 2018 <a href="https://www.facebook.com/MysticKatz">Jennifer Reis</a> and
+<a href="https://www.facebook.com/jrrockshots/">JR Rock Shots</a>.</p>
 
 
 <h2 class="sidebar-title">Calendar</h2>
@@ -29,9 +29,7 @@
 
 <a href="http://purl.oclc.org/NET/edburns/calendar">http://purl.oclc.org/NET/edburns/calendar</a>
 
-  <a href="http://www.google.com/calendar/render?cid=http%3A%2F%2Fwww.google.com%2Fcalendar%2Ffeeds%2Fedburns%2540gmail.com%2Fpublic%2Fbasic" target="_blank"><img src="http://www.google.com/calendar/images/ext/gc_button1.gif" border=0></a>
-
-  <a target="_blank" href="http://www.google.com/calendar/embed?src=edburns%40gmail.com&ctz=America/New_York">non-login calendar</a>
+  <a href="https://calendar.google.com/calendar?cid=dWFrazRyc2kydW85YWJscHZyZWd1a202c2tAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ" target="_blank"><img src="http://www.google.com/calendar/images/ext/gc_button1.gif" border=0></a>
 
 </code></pre>
 
