--- a/edburns/index.html
+++ b/edburns/index.html
@@ -22,11 +22,7 @@
 <p>Photograph copyright 2018 <a href="https://www.facebook.com/MysticKatz">Jennifer Reis</a> and
 <a href="https://www.facebook.com/jrrockshots/">JR Rock Shots</a>.</p>
 
-<div id="twitter_div">
-<h2 class="sidebar-title">Last Three Tweets</h2>
-<ul id="twitter_update_list"></ul>
-<a href="http://twitter.com/edburns" id="twitter-link" style="display:block;text-align:left;">follow me on Twitter</a>
-</div>
+<a class="twitter-timeline" data-lang="en" data-height="480" href="https://twitter.com/edburns?ref_src=twsrc%5Etfw">Tweets by edburns</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 <pre><code>
 
@@ -43,19 +39,20 @@ Calendar
 Projects
 
   <a href="http://purl.oclc.org/NET/jsfbook/">JSF Book</a>
-  <a href="http://ridingthecrest.com/">Rockstar Book</a>
+
+  <a href="https://ridingthecrest.com/">Rockstar Book</a>
 
   <a href="http://purl.oclc.org/NET/edburns/classic-gaming/tunnels">Tunnels of Doom</a>
 
 Blogs
 
-  <a href="http://weblogs.java.net/blog/edburns/">java.net blog</a>
+  <a href="/blog">Professional blog</a>
 
   <a href="http://edburns.blogspot.com/">Personal blog</a>
 
 About
 
-  <a href="http://purl.oclc.org/NET/edburns/resume">Resumé</a>
+  <a href="http://purl.oclc.org/NET/edburns/resume">Resum&eacute;</a>
 
   <a href="https://www.amazon.com/author/edburns">Amazon Author Page</a>
 
@@ -67,7 +64,7 @@ About
 
   <a href="http://purl.oclc.org/NET/edburns/pgp/">PGP Public Key</a>
 
-<a href="../calendar.html">Upcoming Speaking Engagements</a>
+<a href="http://purl.oclc.org/NET/edburns/calendar">Upcoming Speaking Engagements</a>
 
 <a href="speaking-engagements.html">Past Speaking Engagements</a>
 
@@ -79,7 +76,7 @@ About
     <address><a href="mailto:edburns at acm dot org">Ed Burns</a></address>
 <!-- Created: Mon Feb 28 14:07:58 EST 2005 -->
 <!-- hhmts start -->
-Last modified: Mon Jun 10 18:31:54 EDT 2013
+Last modified: Wed Jul 29 18:31:54 EDT 2020
 <!-- hhmts end -->
   
 
