On branch master modified:   edburns/index.html
- Fix twitter.

--- a/edburns/index.html
+++ b/edburns/index.html
@@ -22,8 +22,6 @@
 <p>Photograph copyright 2018 <a href="https://www.facebook.com/MysticKatz">Jennifer Reis</a> and
 <a href="https://www.facebook.com/jrrockshots/">JR Rock Shots</a>.</p>
 
-<a class="twitter-timeline" data-lang="en" data-height="480" href="https://twitter.com/edburns?ref_src=twsrc%5Etfw">Tweets by edburns</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
 <pre><code>
 
 <a href="http://purl.oclc.org/NET/edburns/">http://purl.oclc.org/NET/edburns/</a>
@@ -68,9 +66,11 @@ About
 
 <a href="speaking-engagements.html">Past Speaking Engagements</a>
 
+Recent Tweets
+
 </code></pre>
 
-
+<a class="twitter-timeline" data-lang="en" data-height="480" href="https://twitter.com/edburns?ref_src=twsrc%5Etfw">Tweets by edburns</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
     <hr>
     <address><a href="mailto:edburns at acm dot org">Ed Burns</a></address>
