On branch master Add TheDevConf World Edition modified:   edburns/speaking-engagements.html

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -32,7 +32,19 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <tr>
 
-  <th rowspan="1"><span class="verticaltext">2020</span></th>
+  <th rowspan="2"><span class="verticaltext">2020</span></th>
+
+  <td>TheDevConf World Edition</a></td>
+
+  <td>Virtual</td>
+
+  <td>August</td>
+
+  <td><a href="https://promo.thedevelopersconference.com.br/tdcsp2020-international#rd-section-joq3m2ms">The Future of Development: Wars I've Seen (<a href="https://aka.ms/tdc2020edburns">Slides</a>)</a></td>
+
+</tr>
+
+<tr>
 
   <td>JFokus</a></td>
 
@@ -43,6 +55,7 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
   <td><a href="https://www.jfokus.se/talks/225">Presentation: Deploying 5 Java Frameworks in 5 Different Ways to the Cloud</a> (<a href="https://www.jfokus.se/jfokus20-preso/Packaging-and-Deploying-5-Java-Frameworks-in-5-Ways-into-Azure.pdf">slides</a>, <a href="https://youtu.be/pMfgU1Jxh0M">video</a>), <a href="https://www.jfokus.se/talks/224">Quickie: What Visual Studio Code can do for Java Development</a> (<a href="https://www.jfokus.se/jfokus20-preso/What-Visual-Studio-Code-can-do-for-Java-Development.pdf">slides</a>, <a href="https://youtu.be/IC97I2jQ5E4">video</a>)</td>
 
 </tr>
+
 
 
 <tr>
