On branch master Ignite talk modified:   edburns/speaking-engagements.html

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -32,7 +32,19 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <tr>
 
-  <th rowspan="2"><span class="verticaltext">2020</span></th>
+  <th rowspan="3"><span class="verticaltext">2020</span></th>
+
+  <td>Microsoft Ignite</a></td>
+
+  <td>Virtual</td>
+
+  <td>September</td>
+
+  <td><a href="https://www.youtube.com/redirect?v=ld1cvU4c50c&event=video_description&redir_token=QUFFLUhqbFR4MUxYeG1XVmRyM1U1SERRbXFwQ0lEMkNpZ3xBQ3Jtc0tuRTJUN3lxVkhubHRyYzRzT0xDVWtlUlpkeTV4REdwa1ctRmtYWFhNdlk5S3IyWWVDN0JFM0JIQVZ0NG9GUkE0RHRwODI0WHozV29xRXdPczAyRWhQNXNYbFktczV1RTdwYVFBYmhkc2p1OXZ4aHdPdw%3D%3D&q=https%3A%2F%2Fazure.microsoft.com%2Fdevelop%2Fjava%2F">Java on Your Terms with Azure (<a href="https://www.slideshare.net/edburns/java-on-your-terms-with-azure">Slides</a>, <a href="https://www.youtube.com/watch?v=ld1cvU4c50c">Video</a>)</a></td>
+
+</tr>
+
+<tr>
 
   <td>TheDevConf World Edition</a></td>
 
