--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -29,10 +29,21 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 </tr>
 
-
 <tr>
 
-  <th rowspan="3"><span class="verticaltext">2020</span></th>
+  <th rowspan="4"><span class="verticaltext">2020</span></th>
+
+  <td>JakartaOne Live Stream</a></td>
+
+  <td>Virtual</td>
+
+  <td>December</td>
+
+  <td><a href="https://jakartaone.org/2020/#plan-of-the-day">What We Learned from Porting PiggyMetrics from Spring Boot to MicroProfile (<a href="https://www2.slideshare.net/EdBurns6/what-we-learned-from-porting-piggymetrics-from-spring-boot-to-microprofile">Slides</a>, <a href="https://www.youtube.com/watch?v=MSzfNKSgOCQ">Video</a>)</a></td>
+
+</tr>
+
+<tr>
 
   <td>Microsoft Ignite</a></td>
 
