On branch master modified:   edburns/speaking-engagements.html
https://dev.azure.com/edburns-msft/Open%20Standard%20Enterprise%20Java%20(Java%20EE)%20on%20Azure/_workitems/edit/26

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -63,7 +63,7 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
   <td>August</td>
 
-  <td><a href="https://promo.thedevelopersconference.com.br/tdcsp2020-international#rd-section-joq3m2ms">The Future of Development: Wars I've Seen (<a href="https://aka.ms/tdc2020edburns">Slides</a>)</a></td>
+  <td><a href="https://promo.thedevelopersconference.com.br/tdcsp2020-international#rd-section-joq3m2ms">The Future of Development: Wars I've Seen (<a href="https://aka.ms/tdc2020edburns">Slides</a>, <a href="https://www.youtube.com/watch?v=UJVyGUaHUEg">Video</a>)</a></td>
 
 </tr>
 
