On branch master Added JavaLand 2021 modified:   edburns/speaking-engagements.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -31,7 +31,19 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <tr>
 
-  <th rowspan="4"><span class="verticaltext">2020</span></th>
+  <th rowspan="5"><span class="verticaltext">2020</span></th>
+
+  <td>JavaLand</a></td>
+
+  <td>Virtual</td>
+
+  <td>March</td>
+
+  <td><a href="https://webkonferenz.doag.org/schedule/events/87.html">What We Learned from Porting PiggyMetrics from Spring Boot to MicroProfile</a> (<a href="https://webkonferenz.doag.org/media/JavaLand2021-Lectures.zip">Slides</a>, <a href="https://webkonferenz.doag.org/event/87">Video</a>)</td>
+
+</tr>
+
+<tr>
 
   <td>JakartaOne Live Stream</a></td>
 
@@ -39,7 +51,7 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
   <td>December</td>
 
-  <td><a href="https://jakartaone.org/2020/#plan-of-the-day">What We Learned from Porting PiggyMetrics from Spring Boot to MicroProfile (<a href="https://www2.slideshare.net/EdBurns6/what-we-learned-from-porting-piggymetrics-from-spring-boot-to-microprofile">Slides</a>, <a href="https://www.youtube.com/watch?v=MSzfNKSgOCQ">Video</a>)</a></td>
+  <td><a href="https://jakartaone.org/2020/#plan-of-the-day">What We Learned from Porting PiggyMetrics from Spring Boot to MicroProfile</a> (<a href="https://www2.slideshare.net/EdBurns6/what-we-learned-from-porting-piggymetrics-from-spring-boot-to-microprofile">Slides</a>, <a href="https://www.youtube.com/watch?v=MSzfNKSgOCQ">Video</a>)</td>
 
 </tr>
 
@@ -51,7 +63,7 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
   <td>September</td>
 
-  <td><a href="https://www.youtube.com/redirect?v=ld1cvU4c50c&event=video_description&redir_token=QUFFLUhqbFR4MUxYeG1XVmRyM1U1SERRbXFwQ0lEMkNpZ3xBQ3Jtc0tuRTJUN3lxVkhubHRyYzRzT0xDVWtlUlpkeTV4REdwa1ctRmtYWFhNdlk5S3IyWWVDN0JFM0JIQVZ0NG9GUkE0RHRwODI0WHozV29xRXdPczAyRWhQNXNYbFktczV1RTdwYVFBYmhkc2p1OXZ4aHdPdw%3D%3D&q=https%3A%2F%2Fazure.microsoft.com%2Fdevelop%2Fjava%2F">Java on Your Terms with Azure (<a href="https://www.slideshare.net/edburns/java-on-your-terms-with-azure">Slides</a>, <a href="https://www.youtube.com/watch?v=ld1cvU4c50c">Video</a>)</a></td>
+  <td><a href="https://www.youtube.com/redirect?v=ld1cvU4c50c&event=video_description&redir_token=QUFFLUhqbFR4MUxYeG1XVmRyM1U1SERRbXFwQ0lEMkNpZ3xBQ3Jtc0tuRTJUN3lxVkhubHRyYzRzT0xDVWtlUlpkeTV4REdwa1ctRmtYWFhNdlk5S3IyWWVDN0JFM0JIQVZ0NG9GUkE0RHRwODI0WHozV29xRXdPczAyRWhQNXNYbFktczV1RTdwYVFBYmhkc2p1OXZ4aHdPdw%3D%3D&q=https%3A%2F%2Fazure.microsoft.com%2Fdevelop%2Fjava%2F">Java on Your Terms with Azure</a> (<a href="https://www.slideshare.net/edburns/java-on-your-terms-with-azure">Slides</a>, <a href="https://www.youtube.com/watch?v=ld1cvU4c50c">Video</a>)</td>
 
 </tr>
 
@@ -63,7 +75,7 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
   <td>August</td>
 
-  <td><a href="https://promo.thedevelopersconference.com.br/tdcsp2020-international#rd-section-joq3m2ms">The Future of Development: Wars I've Seen (<a href="https://aka.ms/tdc2020edburns">Slides</a>, <a href="https://www.youtube.com/watch?v=UJVyGUaHUEg">Video</a>)</a></td>
+  <td><a href="https://promo.thedevelopersconference.com.br/tdcsp2020-international#rd-section-joq3m2ms">The Future of Development: Wars I've Seen</a> (<a href="https://aka.ms/tdc2020edburns">Slides</a>, <a href="https://www.youtube.com/watch?v=UJVyGUaHUEg">Video</a>)</td>
 
 </tr>
 
