On branch master GIDS modified:   edburns/speaking-engagements.html
- 2021 catchup

Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -31,7 +31,19 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <tr>
 
-  <th rowspan="5"><span class="verticaltext">2020</span></th>
+  <th rowspan="2"><span class="verticaltext">2021</span></th>
+
+  <td>GIDS</a></td>
+
+  <td>Virtual</td>
+
+  <td>April</td>
+
+  <td><a href="https://wurreka.com/watch/gids-2021/lessons-in-porting-piggymetrics-from-spring-boot-to-microprofile">Lessons in Porting PiggyMetrics from Spring Boot to MicroProfile</a></td>
+
+</tr>
+
+<tr>
 
   <td>JavaLand</a></td>
 
@@ -43,7 +55,10 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 </tr>
 
+
 <tr>
+
+  <th rowspan="4"><span class="verticaltext">2020</span></th>
 
   <td>JakartaOne Live Stream</a></td>
 
@@ -95,7 +110,7 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <tr>
 
-  <th rowspan="7"><span class="verticaltext">2019</span></th>
+  <th rowspan="8"><span class="verticaltext">2019</span></th>
 
   <td>JUG Nuermberg</a></td>
 
@@ -116,6 +131,18 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
   <td>November</td>
 
   <td>Enterprise Java on Microsoft Azure: From Java EE to Spring, we’ve got you covered (<a href="https://www.slideshare.net/EdBurns6/enterprise-java-on-azure-from-java-ee-to-spring-we-have-you-covered">slides</a>)</td>
+
+</tr>
+
+<tr>
+
+  <td>JakartaOne LiveStream</td>
+
+  <td>Virtual</td>
+
+  <td>September</td>
+
+  <td>Jakarta Servlet: A new Twist on an Old Favourite (<a href="https://www.youtube.com/watch?v=Eprlsepysww&list=PLy7t4z5SYNaSxBfGMW-NRQkV_qWM0NipB&index=18">video</a>)</td>
 
 </tr>
 
