On branch master Add Mannheim 2013 modified:   edburns/speaking-engagements.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -635,7 +635,7 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <td>September</td>
 
-<td>Java EE 7</td>
+<td><a href="https://www.oio.de/news/ed-burns-jsf-2-2-oio-schulung.htm">Java EE 7</a></td>
 
 </tr>
 
