On branch master lab guide new file:   scratch/liberty_aro_lab_guide.pdf modified:   edburns/speaking-engagements.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -31,7 +31,19 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <tr>
 
-  <th rowspan="2"><span class="verticaltext">2021</span></th>
+  <th rowspan="3"><span class="verticaltext">2021</span></th>
+
+  <td>Microsoft Build</a></td>
+
+  <td>Virtual</td>
+
+  <td>May</td>
+
+  <td>Java Champions talk Java at Microsoft: Interstitial Programming (<a href="https://www.youtube.com/watch?v=gFRbTWS32EA">Video</a>), <a href="https://mybuild.microsoft.com/sessions/aded32d6-b9e3-486c-a208-9ebcece1fbdd?source=sessions">Ask the Java at Microsoft Experts</a> (<a href="https://www.youtube.com/watch?v=AIc6rdEe3Ys">Video</a>)</td>
+
+</tr>
+
+<tr>
 
   <td>GIDS</a></td>
 
