On branch master Ignite 2021 and Adam Bien modified:   edburns/speaking-engagements.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -31,7 +31,34 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <tr>
 
-  <th rowspan="3"><span class="verticaltext">2021</span></th>
+  <th rowspan="5"><span class="verticaltext">2021</span></th>
+
+  <td>Microsoft Ignite</a></td>
+
+  <td>Virtual</td>
+
+  <td>November</td>
+
+  <td>Modernize enterprise Java applications and messaging with Java EE/Jakarta EE on Azure and Azure Service Bus
+ <a href="https://myignite.microsoft.com/sessions/34e852e3-5571-4c05-bd87-74146ffa7789?source=sessions">session catalog</a></td>
+
+</tr>
+
+<tr>
+
+  <td>Adam Bien's Airhacks podcast</a></td>
+
+  <td>Virtual</td>
+
+  <td>November</td>
+
+  <td>
+ <a href="https://hubs.ly/H0ZK97m0">podcast episode</a></td>
+
+</tr>
+
+
+<tr>
 
   <td>Microsoft Build</a></td>
 
