--- a/edburns/mom-80th-birthday/index.html
+++ b/edburns/mom-80th-birthday/index.html
@@ -24,7 +24,7 @@
 <!-- second redirect 20200401 https://ucd1df730de1a3e76fb08d255c77.dl.dropboxusercontent.com/cd/0/inline/A1ASmRAJik3WTmI8uP-XYS4LbsPJV1JLD25agifHcjl3f3eNMvi_TvVoSBFnRbmJclehPOHzhyTNblWNV13r554V7v0gT5gwjF5QAxFOmgXrbnlAzxZnbhjykH5m0X189EA/file# -->
 
 <video width="1280" height="720" controls>
-  <source src="https://www.dropbox.com/s/x4fss9moi6l5902/20190601-mom-action-news.m4a?raw=1" type="video/mp4">
+  <source src="https://www.dropbox.com/s/aq0f0zvflavbcwy/20200727-mom-80th-04-no-ken-burns-combined.mp4?raw=1" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
