On branch master Add old interview from 2014. modified:   edburns/speaking-engagements.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -589,7 +589,7 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 <td>February
 </td>
 
-<td><a href="http://www.javaland.eu/konferenz/vortrag_details_jl.php?locS=0&kid=466605&tag=25.03.14&id=471617">A New Approach to the UI for Distributed Applications</a>, <a href="http://www.javaland.eu/konferenz/vortrag_details_jl.php?locS=0&kid=466605&tag=26.03.14&id=476075">Hudson: The Little Heart of Big Enterprises</a></td>
+<td><a href="http://www.javaland.eu/konferenz/vortrag_details_jl.php?locS=0&kid=466605&tag=25.03.14&id=471617">A New Approach to the UI for Distributed Applications</a>, <a href="http://www.javaland.eu/konferenz/vortrag_details_jl.php?locS=0&kid=466605&tag=26.03.14&id=476075">Hudson: The Little Heart of Big Enterprises</a>, <a href="https://www.heise.de//developer/artikel/JavaLand-Speaker-II-Interview-mit-Edward-Burns-2136765.html">Heise.de interview</a></td>
 
 </tr>
 
