On branch master JavaLand, Workshoptage, Jug tour, etc. modified:   speaking-engagements.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/edburns/speaking-engagements.html
+++ b/edburns/speaking-engagements.html
@@ -31,7 +31,35 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 <tr>
 
-  <th rowspan="5"><span class="verticaltext">2021</span></th>
+  <th rowspan="2"><span class="verticaltext">2022</span></th>
+
+  <td>JavaLand</a></td>
+
+  <td>Br&uuml;hl, Germany</td>
+
+  <td>March</td>
+
+  <td>Low Cost, Cloud Native, Open Standard Java on Azure Kubernetes Service, Modern Jakarta EE and Microprofile on Azure: Open Liberty, JBoss EAP, and WebLogic, <a href="https://www.javaland.eu/en/home/news/news/?tx_news_pi1%5Bnews%5D=2483&tx_news_pi1%5Bcontroller%5D=News&tx_news_pi1%5Baction%5D=detail&cHash=955b6fd7d1749e908294e90151e35c20">Pre-conference interview</a></td>
+
+</tr>
+
+<tr>
+
+  <td>Adam Bien's Airhacks podcast</a></td>
+
+  <td>Virtual</td>
+
+  <td>January</td>
+
+  <td><a href="https://airhacks.fm/#episode_171">podcast episode</a></td>
+
+</tr>
+
+
+
+<tr>
+
+  <th rowspan="10"><span class="verticaltext">2021</span></th>
 
   <td>Microsoft Ignite</a></td>
 
@@ -44,6 +72,67 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
 </tr>
 
+
+<tr>
+
+  <td>Workshoptage</td>
+
+  <td>Z&uuml;rich</td>
+
+  <td>September</td>
+
+  <td></td>
+
+</tr>
+
+<tr>
+
+  <td>JUG Luzern</td>
+
+  <td>Luzern</td>
+
+  <td>September</td>
+
+  <td></td>
+
+</tr>
+
+<tr>
+
+  <td>JUG Basel</td>
+
+  <td>Basel</td>
+
+  <td>September</td>
+
+  <td></td>
+
+</tr>
+
+<tr>
+
+  <td>JUG Z&uuml;rich</td>
+
+  <td>Z&uuml;rich</td>
+
+  <td>September</td>
+
+  <td></td>
+
+</tr>
+
+<tr>
+
+  <td>JUG Lausanne</td>
+
+  <td>Lausanne</td>
+
+  <td>September</td>
+
+  <td></td>
+
+</tr>
+
 <tr>
 
   <td>Adam Bien's Airhacks podcast</a></td>
@@ -52,11 +141,9 @@ href="http://purl.oclc.org/NET/edburns/speaking-engagements/">&lt;http://purl.oc
 
   <td>November</td>
 
-  <td>
- <a href="https://hubs.ly/H0ZK97m0">podcast episode</a></td>
+  <td> <a href="https://hubs.ly/H0ZK97m0">podcast episode</a></td>
 
 </tr>
-
 
 <tr>
 
@@ -1596,7 +1683,7 @@ Session: Intro to JSF
     <address><a href="mailto:edburns@@acm.org"></a></address>
 <!-- Created: Mon Aug 22 09:32:52 Eastern Daylight Time 2005 -->
 <!-- hhmts start -->
-Last modified: 11 October 2018
+Last modified: 15 February 2022
 <!-- hhmts end -->
   </body>
 </html>
